Task runners & Sass up

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
     <title>Contacts</title>
-    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 
-<script type="text/javascript" src="js_files/contacts.js"></script>
-</body>
+<script type="text/javascript" src="js_files/contacts.js"></script></body>
 </html>
