--- a/index.html
+++ b/index.html
@@ -6,47 +6,27 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body ng-app="ContactsApp">
-    
-<!--     <div hello-world></div>   <!-- TEST STUFF 
-    <hello-world></hello-world>
-    <hello-world></hello-world> -->
 
-    <!-- BASIC BOOTSTRAP NAV -->
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Brand</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-                <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                </form>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Email</a></li>
-                    <li><a href="#">About Us</a></li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-    </nav>
+<!-- BASIC BOOTSTRAP NAV -->
+<div ng-include="'./partials/nav-bar.html'"></div>
 
-    <!-- LIST VIEW OF CONTACTS -->
 
-<!-- DO THIS SHIT BELOW LAST. JQUERY IS INSTALLED CORRECTLY ALREADY. -->
-<!-- NEW CONTACT BUTTON 
+<!-- I NEED TO ASK ABOUT THIS. NOT 100% CLEAR ON HOW IT'S WORKING -->
+<div class="row">
+  <div class="col-xs-10 col-xs-offset-1 main-container">
+    <div class="col-xs-12" ng-view>
+    </div>    
+  </div>
+</div>
+
+
+<!-- NEW CONTACT BUTTON
 <button id="newContactButton" type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#newContactForm">
     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 </button>
 
-<!-- NEW CONTACT MODAL/FORM 
+<!-- NEW CONTACT MODAL/FORM
 <div class="modal fade" id="newContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -79,13 +59,15 @@
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
         <button type="button" class="btn btn-primary" data-dismiss="modal">Save</button>
       </div>
-    </div> <!-- END OF MODAL CONTENT 
+    </div> <!-- END OF MODAL CONTENT
   </div>
 </div> <!-- END OF MODAL -->
+
 <script type="text/javascript" src="lib/node_modules/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="lib/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="lib/node_modules/angular/angular.min.js"></script>
 <script type="text/javascript" src="lib/node_modules/angular-route/angular-route.min.js"></script>
-<script type="text/javascript" src="js_files/Main.js"></script>
+<script type="text/javascript" src="js_files/app.js"></script>
+<script type="text/javascript" src="js_files/controllers/NavCtrl.js"></script>
 </body>
 </html>
