--- a/index.html
+++ b/index.html
@@ -1,73 +1,76 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Contacts</title>
-    <link rel="stylesheet" type="text/css" href="lib/node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-</head>
-<body ng-app="ContactsApp">
+    <head>
+        <title>Contacts</title>
+        <link rel="stylesheet" type="text/css" href="lib/node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
+    </head>
+    <body ng-app="ContactsApp">
 
 
-<!-- BASIC BOOTSTRAP NAV -->
-<div ng-include="'./partials/nav-bar.html'"></div>
+    <!-- BASIC BOOTSTRAP NAV -->
+    <div ng-include="'./partials/nav-bar.html'"></div>
 
 
-<!-- I NEED TO ASK ABOUT THIS. NOT 100% CLEAR ON HOW IT'S WORKING -->
-<div class="row">
-  <div class="col-xs-10 col-xs-offset-1 main-container">
-    <div class="col-xs-12" ng-view>
-    </div>    
-  </div>
-</div>
-
-
-<!-- NEW CONTACT BUTTON
-<button id="newContactButton" type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#newContactForm">
-    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-</button>
-
-<!-- NEW CONTACT MODAL/FORM
-<div class="modal fade" id="newContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-
-      <div class="modal-body">
-        <form>
-            <div class="form-group">
-                <label>Name</label>
-                <input type="text" class="form-control">
-            </div>
-            <div class="form-group">
-                <label>Party</label>
-                <input type="text" class="form-control">
-            </div>
-            <div class="form-group">
-                <label>Email</label>
-                <input type="text" class="form-control">
-            </div>
-            <div class="form-group">
-                <label>Phone</label>
-                <input type="text" class="form-control">
-            </div>
-            <div class="form-group">
-                <label>Office</label>
-                <input type="text" class="form-control">
-            </div>
-        </form>
+    <!-- I NEED TO ASK ABOUT THIS. NOT 100% CLEAR ON HOW IT'S WORKING -->
+    <div class="row">
+      <div class="col-xs-10 col-xs-offset-1 main-container">
+        <div class="col-xs-12" ng-view>
+        </div>    
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary" data-dismiss="modal">Save</button>
-      </div>
-    </div> <!-- END OF MODAL CONTENT
-  </div>
-</div> <!-- END OF MODAL -->
+    </div>
 
-<script type="text/javascript" src="lib/node_modules/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="lib/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="lib/node_modules/angular/angular.min.js"></script>
-<script type="text/javascript" src="lib/node_modules/angular-route/angular-route.min.js"></script>
-<script type="text/javascript" src="js_files/app.js"></script>
-<script type="text/javascript" src="js_files/controllers/NavCtrl.js"></script>
-</body>
+
+    <!-- NEW CONTACT BUTTON -->
+    <!-- <button id="newContactButton" type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#newContactForm">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+    </button> -->
+
+    <!-- NEW CONTACT MODAL/FORM
+    <div class="modal fade" id="newContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+
+          <div class="modal-body">
+            <form>
+                <div class="form-group">
+                    <label>Name</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label>Party</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label>Phone</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label>Office</label>
+                    <input type="text" class="form-control">
+                </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal">Save</button>
+          </div>
+        </div> <!-- END OF MODAL CONTENT
+      </div>    
+    </div> <!-- END OF MODAL -->
+
+    <script type="text/javascript" src="lib/node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="lib/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="lib/node_modules/angular/angular.min.js"></script>
+    <script type="text/javascript" src="lib/node_modules/angular-route/angular-route.min.js"></script>
+    <script type="text/javascript" src="js_files/app.js"></script>
+    <script type="text/javascript" src="js_files/controllers/ListCtrl.js"></script>
+    <script type="text/javascript" src="js_files/controllers/EditCtrl.js"></script>
+    <script type="text/javascript" src="js_files/controllers/NewCtrl.js"></script>
+    <script type="text/javascript" src="js_files/factories/Factory.js"></script>
+    </body>
 </html>
